lazslo->laszlo, 10000btc, and a footer.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head><title>Lazslo's Pizza</title></head>
+<head><title>Laszlo's Pizzeria</title></head>
 <body>
-<p style="text-align:center;"><img alt="Lazslo's Pizza logo" src="logo.png"></p>
+<p style="text-align:center;"><img alt="Laszlo's Pizzeria logo" src="logo.png"></p>
 <h2 align="center">2 Large Supreme Pizzas..... $<span id="pizzaprice"></span></h2>
+<div style="position: absolute;right: 0;bottom: 0;left: 0;padding: 1rem;text-align: center;"><p><small>Based on the 10,000BTC pizzas purchased by <a href="https://en.bitcoin.it/wiki/Laszlo_Hanyecz">laszlo</a> on May 22, 2010 (now known as Bitcoin Pizza Day). Powered by <a href="https://www.coindesk.com/price/">CoinDesk</a>.</small></p></div>
 <script type="text/javascript">
-fetch("https://api.coindesk.com/v1/bpi/currentprice.json").then(function(r) {return r.json();}).then(function(d){ document.getElementById("pizzaprice").innerHTML = (2000*d.bpi.USD.rate.replace(/,/g,'')).toLocaleString();});
+fetch("https://api.coindesk.com/v1/bpi/currentprice.json").then(function(r) {return r.json();}).then(function(d){ document.getElementById("pizzaprice").innerHTML = (10000*d.bpi.USD.rate.replace(/,/g,'')).toLocaleString();});
 </script>
 </body>
 </html>
