--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Laszlo's Pizzeria</title>
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <style type="text/css">
 .main {display: flex;flex-direction: column;align-items: center;justify-content: center;} .footer {position: fixed;bottom 0;width: 100%;text-align: center;display: inline-block;} ul.share-buttons{list-style: none;padding: 0;} ul.share-buttons li{display: inline;} ul.share-buttons .sr-only{position: absolute;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);padding: 0;border: 0;height: 1px;width: 1px;overflow: hidden;}
 </style>
